--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "junit-report-merger": "0.0.4",
     "junit-viewer": "^4.11.0",
     "recursive-readdir": "^2.1.1"
+  },
+  "dependencies": {
+    "adm-zip": "^0.4.7",
+    "node-static": "^0.7.9"
   }
 }
